fix: adjust font sizes & prevent wrapping on toggle chips

--- a/src/sass/components/_toggle-chip.scss
+++ b/src/sass/components/_toggle-chip.scss
@@ -1,9 +1,9 @@
 @use '../includes/palettes';
 @use '../includes/svg';
 
-@mixin neon-toggle-chip-size($neon-toggle-chip-size, $neon-toggle-chip-padding) {
+@mixin neon-toggle-chip-size($neon-toggle-chip-size, $neon-toggle-chip-font-size, $neon-toggle-chip-padding) {
   height: var(--neon-size-#{$neon-toggle-chip-size});
-  font-size: var(--neon-font-size-#{$neon-toggle-chip-size});
+  font-size: var(--neon-font-size-#{$neon-toggle-chip-font-size});
   padding-left: calc(#{$neon-toggle-chip-padding} * var(--neon-space-4));
   padding-right: calc(#{$neon-toggle-chip-padding} * var(--neon-space-4));
 
@@ -61,6 +61,7 @@
       user-select: none;
       display: flex;
       align-items: center;
+      white-space: nowrap;
     }
 
     &__input {
@@ -81,19 +82,19 @@
     }
 
     &--xs {
-      @include neon-toggle-chip-size('xs', 2);
+      @include neon-toggle-chip-size('xs', 's', 2);
     }
 
     &--s {
-      @include neon-toggle-chip-size('s', 2.5);
+      @include neon-toggle-chip-size('s', 'm', 2.5);
     }
 
     &--m {
-      @include neon-toggle-chip-size('m', 3.5);
+      @include neon-toggle-chip-size('m', 'm', 3.5);
     }
 
     &--l {
-      @include neon-toggle-chip-size('l', 5);
+      @include neon-toggle-chip-size('l', 'l', 5);
     }
 
     &:active:not(.neon-toggle-chip--disabled):not(.neon-toggle-chip--show-check) {
